diesel_compile_tests/tests/fail/sqlite_and_mysql_do_not_allow_multiple_iterators.stderr
error[E0499]: cannot borrow `*conn` as mutable more than once at a time
  --> tests/fail/sqlite_and_mysql_do_not_allow_multiple_iterators.rs:15:42
   |
14 |     let row_iter1 = LoadConnection::load(conn, sql_query("bar")).unwrap();
   |                                          ---- first mutable borrow occurs here
15 |     let row_iter2 = LoadConnection::load(conn, sql_query("bar")).unwrap();
   |                                          ^^^^ second mutable borrow occurs here
16 |
17 |     let _ = row_iter1.zip(row_iter2);
   |             --------- first borrow later used here

error[E0499]: cannot borrow `*conn` as mutable more than once at a time
  --> tests/fail/sqlite_and_mysql_do_not_allow_multiple_iterators.rs:22:42
   |
21 |     let row_iter1 = LoadConnection::load(conn, sql_query("bar")).unwrap();
   |                                          ---- first mutable borrow occurs here
22 |     let row_iter2 = LoadConnection::load(conn, sql_query("bar")).unwrap();
   |                                          ^^^^ second mutable borrow occurs here
23 |
24 |     let _ = row_iter1.zip(row_iter2);
   |             --------- first borrow later used here

error[E0499]: cannot borrow `*conn` as mutable more than once at a time
  --> tests/fail/sqlite_and_mysql_do_not_allow_multiple_iterators.rs:36:67
   |
35 |     let row_iter1 = LoadConnection::<PgRowByRowLoadingMode>::load(conn, sql_query("bar")).unwrap();
   |                                                                   ---- first mutable borrow occurs here
36 |     let row_iter2 = LoadConnection::<PgRowByRowLoadingMode>::load(conn, sql_query("bar")).unwrap();
   |                                                                   ^^^^ second mutable borrow occurs here
37 |
38 |     let _ = row_iter1.zip(row_iter2);
   |             --------- first borrow later used here
